--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"domain": "example.com",
-	"dns-server-repo": "http://example-dns-server-repo.com/?oldips=%s&domain=example.com",
+	"dns-server-repo": "http://example-dns-server-repo.com/?oldips={oldIps}&domain={domain}",
 	"used-profile": "generic",
 	"profiles": {
 		"uci": {
