Config file updated

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"domain": "example.com",
-	"dns-server-repo": "http://example-dns-server-repo.com/?oldips={oldIps}&domain={domain}",
+	"domain": "netflix.com",
+	"dns-server-repo": "http://netflix.parrot-bytes.com/?oldips={oldIps}&domain={domain}",
 	"used-profile": "generic",
 	"profiles": {
 		"uci": {
@@ -15,9 +15,9 @@
 			"mode": "direct",
 			"restart-dnsmasq": [
 				["killall","dnsmasq"],
-				["dnsmasq","-c", "1500", "--log-async", "-n"]
+				["dnsmasq","-c", "1500", "--log-async", "-n", "--conf-file={config}"]
 			],
-			"dnsmasq-config-path": "/tmp/etc/dnsmasq.conf"
+			"dnsmasq-config-path": "/tmp/dnsmasq.conf"
 		}
 	}
 }
