--- a/default.config.json
+++ b/default.config.json
@@ -1,6 +1,6 @@
 {
 	"domain": "netflix.com",
-	"dns-server-repo": "http://netflix.parrot-bytes.com/?oldips={oldIps}&domain={domain}",
+	"dns-server-repo": "http://URL?oldips={oldIps}&domain={domain}",
 	"used-profile": "uci",
 	"profiles": {
 		"uci": {
